--- a/styles.css
+++ b/styles.css
@@ -38,6 +38,17 @@ li {
   gap: 10px;
 }
 
+li {
+  display: flex;
+  align-items: center;
+  gap: 10px;
+}
+
+li:first-child {
+  font-size: 24px;
+  margin-bottom: 35px;
+}
+
 li:nth-child(7) {
   margin-bottom: 35px;
 }
@@ -77,11 +88,12 @@ input[type=search] {
 
 .projects {
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(240px, 1fr));
+  grid-template-columns: repeat(auto-fit, minmax(260px, 1fr));
   grid-template-rows: auto 1fr;
   grid-column: 1 / -2;
   grid-row: 1 / -1;
   border: 2px solid green;
+  padding: 15px;
   gap: 20px;
 }
 
@@ -89,13 +101,13 @@ input[type=search] {
   grid-column: 1 / -1;
   grid-row: auto;
   margin: 0;
-  text-align: center;
+  padding-bottom: 10px;
 }
 
 .article {
   background-color: #c99292;
-  width: 240px;
-  height: 180px;
+  width: 260px;
+  height: 190px;
 }
 
 .announcements {
@@ -108,4 +120,13 @@ input[type=search] {
   grid-column: -2 / -1;
   grid-row: -2 / -1;
   border: 2px solid #ffc600;
+}
+
+@media(max-width: 972px) {
+  .nav-sidebar {
+   padding-right: 10px; 
+  }
+  .projects {
+    justify-items: center;
+  }
 }
