--- a/styles.css
+++ b/styles.css
@@ -60,7 +60,7 @@ li:nth-child(7) {
   grid-row: 1 /2;
   grid-template-columns: 3fr 1fr;
   grid-template-rows: 1fr 1fr;
-  margin: 0 10px;
+  margin: 0 30px;
   align-items: center;
 }
 
@@ -113,6 +113,7 @@ input[type="search"] {
   grid-column: 1 / 2;
   display: flex;
   align-items: center;
+  gap: 5px;
 }
 
 .user_stuff {
@@ -133,7 +134,6 @@ input[type="search"] {
 
 .user_name {
   font-weight: 700;
-  padding-top: 10px;
 }
 
 .header-bottom-right {
@@ -143,11 +143,25 @@ input[type="search"] {
   margin-right: 40px;
 }
 
+button {
+  background-color: #6176ff;
+  color: #f7f7f7;
+  padding: 5px 20px;
+  border-radius: 12px;
+  cursor: pointer;
+}
+
+button:hover {
+  background-color: #8a99f6;
+  color: #fff;
+}
+
 .main-content {
   display: grid;
   grid-template-columns: 3fr 1fr;
   grid-template-rows: 1fr 1fr;
-  margin-bottom: 50px;
+  padding-bottom: 50px;
+  background-color: #e2e0e0ea;
 }
 
 .projects {
@@ -156,8 +170,7 @@ input[type="search"] {
   grid-template-rows: auto 1fr;
   grid-column: 1 / -2;
   grid-row: 1 / -1;
-  border: 2px solid green;
-  padding: 15px;
+  padding: 15px 15px 0 15px;
   gap: 20px;
 }
 
@@ -165,19 +178,75 @@ input[type="search"] {
   grid-column: 1 / -1;
   grid-row: auto;
   margin: 0;
-  padding-bottom: 10px;
+  padding-bottom: 5px;
 }
 
-.article {
-  background-color: #c99292;
+.rect {
+  display: grid;
+  grid-template-rows: 1fr 6fr 1fr;
+  background-color: #f7f7f7;
   width: 260px;
   height: 190px;
+  border-radius: 6px;
+  border-left: 5px solid #ffc600;
+}
+
+
+textarea {
+  border: none;
+}
+
+#textarea-header {
+  font-size: 15px;
+  font-weight: 600;
+}
+
+#textarea-body {
+  font-size: 12px;
+  font-weight: 300;
+}
+
+.icons {
+  display: flex;
+  gap: 15px;
+  justify-content: end;
+  margin: 5px 10px 5px 0;
 }
 
 .announcements {
+  display: grid;
+  grid-template-rows: auto 1fr;
   grid-column: -2 / -1;
   grid-row: 1 / -2;
-  border: 2px solid purple;
+  padding: 0 20px;
+}
+
+.announcements > h3 {
+  margin: 0;
+  padding: 20px 0 10px 0;
+}
+
+.news-container {
+  display: grid;
+  grid-template-rows: repeat(1, auto auto auto);
+  background-color: #f7f7f7;
+  border-radius: 8px;
+  padding: 20px;
+}
+
+.news > p {
+  font-size: 12px;
+}
+
+.news > div {
+  margin: 5px 0;
+  border-bottom: 2px solid #e2e0e0ea;
+}
+
+
+.news > * {
+  margin: 0;
+  padding: 0;
 }
 
 .trending {
