--- a/styles.css
+++ b/styles.css
@@ -249,10 +249,52 @@ textarea {
   padding: 0;
 }
 
-.trending {
+.trending-container {
   grid-column: -2 / -1;
   grid-row: -2 / -1;
-  border: 2px solid #ffc600;
+}
+
+.trending-container {
+  display: grid;
+  grid-template-rows: auto 1fr 1fr 1fr 1fr;
+  grid-column: -2 / -1;
+  grid-row: 2 / -1;
+  padding: 0 20px;
+}
+
+.trending-container > h3 {
+  margin: 0;
+  padding: 20px 0 10px 0;
+}
+
+.trending {
+  display: grid;
+  grid-template-columns: auto auto;
+  grid-row: 2 / -1;
+  background-color: #f7f7f7;
+  justify-content: start;
+  align-items: center;
+  padding: 20px;
+  gap: 10px;
+}
+
+.trending > * {
+  margin: 0;
+  padding: 0;
+}
+
+.trending-element {
+  display: flex;
+  flex-direction: column;
+}
+
+.trending-element > * {
+  margin: 0;
+  padding: 0;
+}
+
+.trending-element > p {
+  font-size: 12px;
 }
 
 @media(max-width: 972px) {
